VERSION 0.5.0

IN PROGRESS...


==========================================

VERSION 0.4.3

08.07.2015

+ Astro drones
* Animal respawn on planets
* HP is now not shown on animals untill their corpse research is done
* Chance of loosing a crewmember when ship is taking damage
* Switched to LWJGL 2.9.3
* Chance to reconfigure ship for final battle
* Animals respawn on planets
+ New private messages

===========================================

VERSION 0.4.2

17.05.2015

* Surface map now shows visited regions
+ Weather effects: rain, acid rain, tornado, meteors
* Fixed rogue convoy not attacking
* Fixed landing party item adding each time shuttle returns to the ship
* Fixed some buggy dialogs
* Fixed oxygen spending when no action happens (move attempt with overweight, shooting with no targets)
* Fixed targeting dead animals
* Switching locale ingame

=============================================

VERSION 0.4.1

21.04.2015

+ Trade system
+ Alien ships now drop loot
* Patched nifty-gui to allow lists have elements with different height
* Some new music
+ 3 new colony quests
+ English translation completed
+ Hints on a galaxy map
* Improved private messages gui
* Dumping resources to the shuttle
+ Confirmation before attacking a friendly ship

=============================================

VERSION 0.4.0

05.12.2014

* Global refactoring of game object classes
+ Ship inventory screen
+ Officer dialog system
+ "Inside" encounter
+ "Red meat" encounter
* Dungeons now do not advance turn count and star date
* Split journal quest tab into 'completed' and 'active' tabs
* New officer portraits
* New ship art
* Events that can be met only in given range from solar system
+ Help popups
* Dungeon monster descriptions now moved to json out of map files

=============================================

VERSION 0.3.2

17.07.2014

* Target selection popup
* Realistic planet shading
+ Bork family problems event
+ 2 new music tracks

=============================================
